--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,10 @@
   background: linear-gradient(black, navy);
 }
 
+.services {
+  background: linear-gradient(black, navy);
+}
+
 .section {
   min-height: 100vh;
   display: flex;
@@ -11,7 +15,7 @@
   justify-content: center;
 }
 
-img {
+.image {
   width: 300px;
   height: 300px;
   border: 4px solid #5ce2ff;
