--- a/src/App.css
+++ b/src/App.css
@@ -22,8 +22,11 @@
   border-radius: 50%;
 }
 
-.img2 {
-  width: 200px;
+.tentang {
+  width: 180px;
+  height: 180px;
+  border: 4px solid #5ce2ff;
+  border-radius: 50%;
 }
 
 .media_social {
