--- a/src/App.css
+++ b/src/App.css
@@ -24,9 +24,9 @@
 
 .tentang {
   width: 180px;
-  height: 180px;
-  border: 4px solid #5ce2ff;
-  border-radius: 50%;
+  border: 4px solid #06090a;
+  height: 290px;
+  border-radius: 10%;
 }
 
 .media_social {
